--- a/src/app/mainpage/mainpage.component.css
+++ b/src/app/mainpage/mainpage.component.css
@@ -76,11 +76,11 @@ h1 {
 
 .whitebckg {
     background-color: transparent;
-    color: white;
+    color: whitesmoke;
 }
 
 #logotext{
-    font-family: Calibri, sans-serif;
+    font-family: 'Roboto', sans-serif;
     text-align: left;
     position: relative;
     top: 50%;
