some register and login visual fixes

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -6,6 +6,18 @@
     <title>Login</title>
 </head>
 <body>
-    <h1>Login</h1>
+    <div id="mainFrame">
+        <h1>Hola!<br>Logueate.</h1><hr>
+        <form id="account">
+            <input type="email" id="email" placeholder="ieee@itba.edu.ar"><br>
+            <button id="login">Log In</button>
+        </form>
+        <br><br>
+        <h3>
+            Forgot Password?
+            <br>
+            <a href="">Click here.</a>
+        </h3>
+    </div>
 </body>
 </html>
