--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -28,6 +28,7 @@ hr {
 
 a{
     color: whitesmoke;
+    font-weight: 100;
 }
 
 a:any-link{
@@ -79,4 +80,10 @@ button{
 button:hover {
     background-color: whitesmoke;
     color: black;
+}
+
+#passerr{
+    font-size: 13pt;
+    font-weight: 100;
+    text-align: right;
 }
