--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -43,7 +43,7 @@
                   <button type="submit" style="float: left;">Sign Up</button>
                 </div>
                 <div class="col-sm">
-                  <h4 id="passerr" [hidden]="isHidden3">placeholder</h4>
+                  <h4 id="passerr" [hidden]="isHidden3"></h4>
                 </div>
               </div>
             </div>
@@ -61,7 +61,7 @@
         <form id="changepass">
           <input type="email" [hidden]="isHidden" placeholder="e-mail" id="emailchange">
         </form>
-        <h4 id="passChgConf" [hidden]="isHidden2">placeholder</h4>
+        <h4 id="passChgConf" [hidden]="isHidden2"></h4>
         <hr>
         <h3>Already Singed Up?</h3>
         <button class="smallbutton" [routerLink]="['/login']">Log In</button>
