--- a/src/app/news/news-mainpage/news-mainpage.component.html
+++ b/src/app/news/news-mainpage/news-mainpage.component.html
@@ -6,9 +6,12 @@
     <title>News</title>
 </head>
 <body>
-    <h1>IEEE ITBA News</h1>
+    <h1>IEEE|News</h1>
+    <br>
+    <h4>Ingenieros de la curiosidad y la informacion.</h4>
+    <br><hr>
     <app-main-article></app-main-article>
-    <app-articles-row></app-articles-row>
+    <br><hr>
     <app-articles-column></app-articles-column>
 </body>
 </html>
