--- a/src/app/news/main-article/main-article.component.css
+++ b/src/app/news/main-article/main-article.component.css
@@ -1,7 +1,51 @@
-mat-grid-tile{
-    border: 1px red solid;
+table{
+    margin: 20px;
+    height: 90%;
 }
 
 tr{
-    border: green 1px solid;
+    height: fit-content;
+}
+
+h1{
+    font-family: 'Roboto';
+    font-size: 50pt;
+    line-height: 50pt;
+}
+
+p{
+    font-size: 15pt;
+}
+
+img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+    max-height: 50vh;
+    border-radius: 20px;
+    padding: 2px;
+}
+
+ul{
+    padding-left: 0;
+}
+
+ul.tags li {
+    display:inline;
+    border-left: solid 1px;
+    padding-left: 4pt;
+    padding-right: 4pt;
+    margin-right: 4pt;
+}
+
+.card{
+    background-color: whitesmoke;
+    border-radius: 20px;
+}
+
+.loading{
+    background: rgb(198,198,198);
+    border-radius: 20px;
+    padding: 2px;
+    color: rgb(198,198,198);
 }
