added submit buttons

--- a/src/app/writers-form/writers-form.component.html
+++ b/src/app/writers-form/writers-form.component.html
@@ -91,13 +91,19 @@
         </mat-grid-tile>
 
         <!-- Body -->
-        <mat-grid-tile colspan="4" rowspan="8">
+        <mat-grid-tile colspan="4" rowspan="6">
           <mat-form-field appearance="fill" style="width:50vw">
             <mat-label>Cuerpo</mat-label>
             <textarea matInput></textarea>
           </mat-form-field>
         </mat-grid-tile>
 
+        <!-- Submit Buttons -->
+        <mat-grid-tile colspan="4">
+          <button mat-raised-button color="primary">SUBIR NOTICIA</button>
+
+          <button mat-stroked-button color="primary">VISTA PREVIA</button>
+        </mat-grid-tile>
       </mat-grid-list>
     </mat-card>
   </div>
