--- a/src/app/write-news/write-news.component.html
+++ b/src/app/write-news/write-news.component.html
@@ -45,64 +45,14 @@
                     </mat-form-field>
                 </mat-grid-tile>
 
-                <mat-grid-tile colspan="4">
-
-                    <!-- Font Size -->
-                    <mat-form-field appearance="fill">
-                        <mat-label>Tamaño de Fuente</mat-label>
-                        <mat-select>
-                            <mat-option value="option8">8</mat-option>
-                            <mat-option value="option9">9</mat-option>
-                            <mat-option value="option11">11</mat-option>
-                            <mat-option value="option12">12</mat-option>
-                            <mat-option value="option14">14</mat-option>
-                            <mat-option value="option18">18</mat-option>
-                            <mat-option value="option24">24</mat-option>
-                            <mat-option value="option30">30</mat-option>
-                            <mat-option value="option36">36</mat-option>
-                            <mat-option value="option48">48</mat-option>
-                            <mat-option value="option60">60</mat-option>
-                            <mat-option value="option72">72</mat-option>
-                            <mat-option value="option96">96</mat-option>
-                        </mat-select>
-                    </mat-form-field>
-
-                    <!-- Font Style -->
-                    <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
-                        <mat-button-toggle value="bold"><i class="material-icons">format_bold</i></mat-button-toggle>
-                        <mat-button-toggle value="italic"><i class="material-icons">format_italic</i>
-                        </mat-button-toggle>
-                        <mat-button-toggle value="underline"><i class="material-icons">format_underline</i>
-                        </mat-button-toggle>
-                    </mat-button-toggle-group>
-
-                    <!-- Text Alignment -->
-                    <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
-                        <mat-button-toggle value="bold"><i class="material-icons">format_align_left</i>
-                        </mat-button-toggle>
-                        <mat-button-toggle value="italic"><i class="material-icons">format_align_center</i>
-                        </mat-button-toggle>
-                        <mat-button-toggle value="underline"><i class="material-icons">format_align_right</i>
-                        </mat-button-toggle>
-                        <mat-button-toggle value="underline"><i class="material-icons">format_align_justify</i>
-                        </mat-button-toggle>
-                    </mat-button-toggle-group>
-
-                    <!-- Item Lists  -->
-                    <button mat-icon-button>
-                        <mat-icon>format_list_numbered</mat-icon>
-                    </button>
-                    <button mat-icon-button>
-                        <mat-icon>format_list_bulleted</mat-icon>
-                    </button>
-                </mat-grid-tile>
-
                 <!-- Body -->
                 <mat-grid-tile colspan="4" rowspan="6">
-                    <mat-form-field appearance="fill" style="width:50vw">
-                        <mat-label>Cuerpo</mat-label>
-                        <textarea matInput></textarea>
-                    </mat-form-field>
+                    <form [formGroup]="editorForm">
+                        <div class="form-group">
+                            <label for="editor">Cuerpo</label>
+                            <quill-editor formControlName="editor"></quill-editor>
+                        </div>
+                    </form>
                 </mat-grid-tile>
 
                 <!-- Submit Buttons -->
@@ -112,8 +62,16 @@
                     <button mat-stroked-button color="primary">VISTA PREVIA</button>
                 </mat-grid-tile>
             </mat-grid-list>
+
+
         </mat-card>
+
     </div>
+
+    <div class="container">
+
+    </div>
+
 
 </body>
 
